--- a/testing_inst_ind_comb_numba.ipynb
+++ b/testing_inst_ind_comb_numba.ipynb
@@ -1980,33 +1980,33 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>(get_lag(price_data['xrp_volume'], lag=2)[MAX_...</td>\n",
-       "      <td>((get_lag(price_data['ng_volume'], lag=5)[MAX_...</td>\n",
-       "      <td>-36068.239247</td>\n",
+       "      <td>((price_data['btc_close'][MAX_LAG:] &lt; numba_in...</td>\n",
+       "      <td>((numba_indicators.relative_strength_index(pri...</td>\n",
+       "      <td>-61876.559872</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>(get_lag(price_data['xrp_volume'], lag=2)[MAX_...</td>\n",
-       "      <td>((get_lag(price_data['ng_volume'], lag=5)[MAX_...</td>\n",
-       "      <td>-36068.239247</td>\n",
+       "      <td>((price_data['btc_close'][MAX_LAG:] &lt; numba_in...</td>\n",
+       "      <td>((numba_indicators.relative_strength_index(pri...</td>\n",
+       "      <td>-61876.559872</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>(get_lag(price_data['xrp_volume'], lag=2)[MAX_...</td>\n",
-       "      <td>((get_lag(price_data['ng_volume'], lag=5)[MAX_...</td>\n",
-       "      <td>-36068.239247</td>\n",
+       "      <td>((price_data['btc_close'][MAX_LAG:] &lt; numba_in...</td>\n",
+       "      <td>((numba_indicators.relative_strength_index(pri...</td>\n",
+       "      <td>-61876.559872</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>(get_lag(price_data['xrp_volume'], lag=2)[MAX_...</td>\n",
-       "      <td>((get_lag(price_data['ng_volume'], lag=5)[MAX_...</td>\n",
-       "      <td>-36068.239247</td>\n",
+       "      <td>((price_data['btc_close'][MAX_LAG:] &lt; numba_in...</td>\n",
+       "      <td>((numba_indicators.relative_strength_index(pri...</td>\n",
+       "      <td>-61876.559872</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>(get_lag(price_data['xrp_volume'], lag=2)[MAX_...</td>\n",
-       "      <td>((get_lag(price_data['ng_volume'], lag=5)[MAX_...</td>\n",
-       "      <td>-36068.239247</td>\n",
+       "      <td>((price_data['btc_close'][MAX_LAG:] &lt; numba_in...</td>\n",
+       "      <td>((numba_indicators.relative_strength_index(pri...</td>\n",
+       "      <td>-61876.559872</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -2015,68 +2015,68 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>19527</th>\n",
-       "      <td>(np.cos(get_lag(price_data['tia_open'], lag=2)...</td>\n",
-       "      <td>(np.sqrt(get_lag(price_data['nq_volume'], lag=...</td>\n",
-       "      <td>-1.516622</td>\n",
+       "      <th>38117</th>\n",
+       "      <td>((price_data['btc_close'][MAX_LAG:] &lt; numba_in...</td>\n",
+       "      <td>((numba_indicators.relative_strength_index(pri...</td>\n",
+       "      <td>-1.514911</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>19528</th>\n",
-       "      <td>get_lag(price_data['nvda_volume'], lag=2)[MAX_...</td>\n",
-       "      <td>(np.sqrt(get_lag(price_data['amzn_high'], lag=...</td>\n",
-       "      <td>-1.514053</td>\n",
+       "      <th>38118</th>\n",
+       "      <td>((price_data['btc_close'][MAX_LAG:] &lt; numba_in...</td>\n",
+       "      <td>((numba_indicators.relative_strength_index(pri...</td>\n",
+       "      <td>-1.512986</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>19529</th>\n",
-       "      <td>(get_lag(price_data['coin_volume'], lag=3)[MAX...</td>\n",
-       "      <td>np.cos(get_lag(price_data['gc_high'], lag=4)[M...</td>\n",
-       "      <td>-1.509539</td>\n",
+       "      <th>38119</th>\n",
+       "      <td>((price_data['btc_close'][MAX_LAG:] &lt; numba_in...</td>\n",
+       "      <td>((numba_indicators.relative_strength_index(pri...</td>\n",
+       "      <td>-1.507192</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>19530</th>\n",
-       "      <td>np.cos(price_data['6e_low'][MAX_LAG:]) &gt;= np.c...</td>\n",
-       "      <td>(np.cos(price_data['tsla_open'][MAX_LAG:]) * n...</td>\n",
-       "      <td>-1.507837</td>\n",
+       "      <th>38120</th>\n",
+       "      <td>((price_data['btc_close'][MAX_LAG:] &lt; numba_in...</td>\n",
+       "      <td>((numba_indicators.relative_strength_index(pri...</td>\n",
+       "      <td>-1.506468</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>19531</th>\n",
-       "      <td>get_lag(price_data['nq_volume'], lag=2)[MAX_LA...</td>\n",
-       "      <td>price_data['gc_volume'][MAX_LAG:] &lt; 9</td>\n",
-       "      <td>-1.502361</td>\n",
+       "      <th>38121</th>\n",
+       "      <td>((price_data['btc_close'][MAX_LAG:] &lt; numba_in...</td>\n",
+       "      <td>((numba_indicators.relative_strength_index(pri...</td>\n",
+       "      <td>-1.505745</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>19532 rows × 3 columns</p>\n",
+       "<p>38122 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "                                                     buy  \\\n",
-       "0      (get_lag(price_data['xrp_volume'], lag=2)[MAX_...   \n",
-       "1      (get_lag(price_data['xrp_volume'], lag=2)[MAX_...   \n",
-       "2      (get_lag(price_data['xrp_volume'], lag=2)[MAX_...   \n",
-       "3      (get_lag(price_data['xrp_volume'], lag=2)[MAX_...   \n",
-       "4      (get_lag(price_data['xrp_volume'], lag=2)[MAX_...   \n",
+       "0      ((price_data['btc_close'][MAX_LAG:] < numba_in...   \n",
+       "1      ((price_data['btc_close'][MAX_LAG:] < numba_in...   \n",
+       "2      ((price_data['btc_close'][MAX_LAG:] < numba_in...   \n",
+       "3      ((price_data['btc_close'][MAX_LAG:] < numba_in...   \n",
+       "4      ((price_data['btc_close'][MAX_LAG:] < numba_in...   \n",
        "...                                                  ...   \n",
-       "19527  (np.cos(get_lag(price_data['tia_open'], lag=2)...   \n",
-       "19528  get_lag(price_data['nvda_volume'], lag=2)[MAX_...   \n",
-       "19529  (get_lag(price_data['coin_volume'], lag=3)[MAX...   \n",
-       "19530  np.cos(price_data['6e_low'][MAX_LAG:]) >= np.c...   \n",
-       "19531  get_lag(price_data['nq_volume'], lag=2)[MAX_LA...   \n",
+       "38117  ((price_data['btc_close'][MAX_LAG:] < numba_in...   \n",
+       "38118  ((price_data['btc_close'][MAX_LAG:] < numba_in...   \n",
+       "38119  ((price_data['btc_close'][MAX_LAG:] < numba_in...   \n",
+       "38120  ((price_data['btc_close'][MAX_LAG:] < numba_in...   \n",
+       "38121  ((price_data['btc_close'][MAX_LAG:] < numba_in...   \n",
        "\n",
        "                                                    sell       fitness  \n",
-       "0      ((get_lag(price_data['ng_volume'], lag=5)[MAX_... -36068.239247  \n",
-       "1      ((get_lag(price_data['ng_volume'], lag=5)[MAX_... -36068.239247  \n",
-       "2      ((get_lag(price_data['ng_volume'], lag=5)[MAX_... -36068.239247  \n",
-       "3      ((get_lag(price_data['ng_volume'], lag=5)[MAX_... -36068.239247  \n",
-       "4      ((get_lag(price_data['ng_volume'], lag=5)[MAX_... -36068.239247  \n",
+       "0      ((numba_indicators.relative_strength_index(pri... -61876.559872  \n",
+       "1      ((numba_indicators.relative_strength_index(pri... -61876.559872  \n",
+       "2      ((numba_indicators.relative_strength_index(pri... -61876.559872  \n",
+       "3      ((numba_indicators.relative_strength_index(pri... -61876.559872  \n",
+       "4      ((numba_indicators.relative_strength_index(pri... -61876.559872  \n",
        "...                                                  ...           ...  \n",
-       "19527  (np.sqrt(get_lag(price_data['nq_volume'], lag=...     -1.516622  \n",
-       "19528  (np.sqrt(get_lag(price_data['amzn_high'], lag=...     -1.514053  \n",
-       "19529  np.cos(get_lag(price_data['gc_high'], lag=4)[M...     -1.509539  \n",
-       "19530  (np.cos(price_data['tsla_open'][MAX_LAG:]) * n...     -1.507837  \n",
-       "19531              price_data['gc_volume'][MAX_LAG:] < 9     -1.502361  \n",
+       "38117  ((numba_indicators.relative_strength_index(pri...     -1.514911  \n",
+       "38118  ((numba_indicators.relative_strength_index(pri...     -1.512986  \n",
+       "38119  ((numba_indicators.relative_strength_index(pri...     -1.507192  \n",
+       "38120  ((numba_indicators.relative_strength_index(pri...     -1.506468  \n",
+       "38121  ((numba_indicators.relative_strength_index(pri...     -1.505745  \n",
        "\n",
-       "[19532 rows x 3 columns]"
+       "[38122 rows x 3 columns]"
       ]
      },
      "execution_count": 24,
@@ -2087,6 +2087,7 @@
    "source": [
     "strategy_file_path = Path(r'C:/\\Users/\\vchar/\\OneDrive/\\Desktop/\\ML Projects/\\Upwork/\\AlgoT_ML_Dev/\\GrammarEvolution/\\PonyGE2/\\derived_strategies/\\ge_results_inst_ind_comb_numba.csv')\n",
     "strategy_file_path = Path(r\"C:/\\Users/\\vchar/\\Downloads/\\ge_results (2).csv\")\n",
+    "strategy_file_path = Path(r\"C:/\\Users/\\vchar/\\OneDrive/\\Desktop/\\ML Projects/\\Upwork/\\AlgoT_ML_Dev/\\GrammarEvolution/\\PonyGE2/\\results/\\VCh_24_10_30_180400_225305_2676_225305/\\ge_results.csv\")\n",
     "\n",
     "try:\n",
     "    df_str = pd.read_csv(strategy_file_path)\n",
@@ -2102,6 +2103,41 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# buy_list = [\n",
+    "#     \"(price_data[\"'\"btc_close\"'\"][MAX_LAG:] == signals.moving_max(price_data[\"'\"btc_close\"'\"], window=<window-const>)[MAX_LAG:])\",\n",
+    "#     \"(price_data[\"'\"btc_close\"'\"][MAX_LAG:] == signals.moving_min(price_data[\"'\"btc_close\"'\"], window=<window-const>)[MAX_LAG:])\",\n",
+    "#     \"(numba_indicators.relative_strength_index(prices=price_data[\"'\"btc_close\"'\"], window=<window-const>)[MAX_LAG:] < 30)\",\n",
+    "#     \"(numba_indicators.relative_strength_index(prices=price_data[\"'\"btc_close\"'\"], window=<window-const>)[MAX_LAG:] > 70)\",\n",
+    "#     \"(price_data[\"'\"btc_close\"'\"][MAX_LAG:] > get_lag(price_data[\"'\"btc_close\"'\"], lag=<lag-steps>)[MAX_LAG:])\",\n",
+    "#     \"(price_data[\"'\"btc_close\"'\"][MAX_LAG:] < get_lag(price_data[\"'\"btc_close\"'\"], lag=<lag-steps>)[MAX_LAG:])\",\n",
+    "#     \"(price_data[\"'\"btc_close\"'\"][MAX_LAG:] > numba_indicators.moving_average(prices=price_data[\"'\"btc_close\"'\"], window=<short-window-const>)[MAX_LAG:])\",\n",
+    "#     \"(price_data[\"'\"btc_close\"'\"][MAX_LAG:] < numba_indicators.moving_average(prices=price_data[\"'\"btc_close\"'\"], window=<short-window-const>)[MAX_LAG:])\",\n",
+    "\n",
+    "# ]\n",
+    "\n",
+    "# sell_list = [\n",
+    "#     \"(price_data[\"'\"btc_close\"'\"][MAX_LAG:] == signals.moving_min(price_data[\"'\"btc_close\"'\"], window=<window-const>)[MAX_LAG:])\",\n",
+    "#     \"(price_data[\"'\"btc_close\"'\"][MAX_LAG:] == signals.moving_max(price_data[\"'\"btc_close\"'\"], window=<window-const>)[MAX_LAG:])\",\n",
+    "#     \"(numba_indicators.relative_strength_index(prices=price_data[\"'\"btc_close\"'\"], window=<window-const>)[MAX_LAG:] > 70)\",\n",
+    "#     \"(numba_indicators.relative_strength_index(prices=price_data[\"'\"btc_close\"'\"], window=<window-const>)[MAX_LAG:] < 30)\",\n",
+    "#     \"(price_data[\"'\"btc_close\"'\"][MAX_LAG:] < get_lag(price_data[\"'\"btc_close\"'\"], lag=<lag-steps>)[MAX_LAG:])\",\n",
+    "#     \"(price_data[\"'\"btc_close\"'\"][MAX_LAG:] > get_lag(price_data[\"'\"btc_close\"'\"], lag=<lag-steps>)[MAX_LAG:])\",\n",
+    "#     \"(price_data[\"'\"btc_close\"'\"][MAX_LAG:] < numba_indicators.moving_average(prices=price_data[\"'\"btc_close\"'\"], window=<short-window-const>)[MAX_LAG:])\",\n",
+    "#     \"(price_data[\"'\"btc_close\"'\"][MAX_LAG:] > numba_indicators.moving_average(prices=price_data[\"'\"btc_close\"'\"], window=<short-window-const>)[MAX_LAG:])\",\n",
+    "# ]\n",
+    "\n",
+    "# df_str = pd.DataFrame()\n",
+    "# df_str['buy'] = buy_list\n",
+    "# df_str['sell'] = sell_list\n",
+    "# df_str"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2110,7 +2146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2222,7 +2258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2236,7 +2272,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "19532it [3:46:26,  1.44it/s]\n"
+      "5056it [1:48:32,  1.17s/it]"
      ]
     }
    ],
@@ -2270,7 +2306,7 @@
     "#import pandas as pd\n",
     "import numpy as np\n",
     "import gc\n",
-    "from fitness.indicators import numba_indicators\n",
+    "from fitness.indicators import numba_indicators, signals\n",
     "from fitness.performance.helper_func import merge_pnl, get_drawdowns, get_pnl, trading_signals, get_lag, get_monkey_test_results\n",
     "os.chdir(CUR_DIR)\n",
     "#from numba import njit\n",
@@ -2349,8 +2385,11 @@
     "        exec_dict = {'price_data': price_data}\n",
     "        exec(text_code, exec_dict)\n",
     "\n",
-    "        equity_curve_arr = exec_dict['equity_curve_arr']\n",
-    "        equity_curve_dict[strategy_idx].append(equity_curve_arr)\n",
+    "        try:\n",
+    "            equity_curve_arr = exec_dict['equity_curve_arr']\n",
+    "            equity_curve_dict[strategy_idx].append(equity_curve_arr)\n",
+    "        except:\n",
+    "            pass\n",
     "\n",
     "        try:\n",
     "            fixed_winning_percent, fixed_bar_winning_percent, random_winning_percent = calculate_mean_win_perc_entry_testing(exec_dict, df)\n",
@@ -2429,7 +2468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2449,7 +2488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2672,7 +2711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2900,7 +2939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3110,7 +3149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3320,7 +3359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3537,7 +3576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3723,7 +3762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3914,7 +3953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -4105,7 +4144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -4451,7 +4490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -4786,7 +4825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -5114,7 +5153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5126,7 +5165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5140,7 +5179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5161,7 +5200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -5420,7 +5459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -5684,7 +5723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -5941,7 +5980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5961,7 +6000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
