some unnecessary changes added

--- a/run.ipynb
+++ b/run.ipynb
@@ -245,19 +245,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "! python ponyge.py --fitness_function fitness_v20241121 --grammar_file btc_test_no_ind.pybnf --population_size 20 --generations 2 --mutate_duplicates --multicore"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "^C\n"
+      "\n",
+      "Start:\t 2024-11-21 23:15:24.181946 \n",
+      "\n",
+      "Warning: Grammar contains unit production for production rule <fc>\n",
+      "         Unit productions consume GE codons.\n",
+      "Warning: Grammar contains unit production for production rule <deff>\n",
+      "         Unit productions consume GE codons.\n",
+      "Warning: Grammar contains unit production for production rule <callf>\n",
+      "         Unit productions consume GE codons.\n",
+      "Warning: Grammar contains unit production for production rule <var-volume>\n",
+      "         Unit productions consume GE codons.\n",
+      "Warning: Grammar contains unit production for production rule <close-prices>\n",
+      "         Unit productions consume GE codons.\n",
+      "Warning: Grammar contains unit production for production rule <open-prices>\n",
+      "         Unit productions consume GE codons.\n",
+      "Warning: Grammar contains unit production for production rule <high-prices>\n",
+      "         Unit productions consume GE codons.\n",
+      "Warning: Grammar contains unit production for production rule <low-prices>\n",
+      "         Unit productions consume GE codons.\n",
+      "Warning: Grammar contains unit production for production rule <volume>\n",
+      "         Unit productions consume GE codons.\n"
      ]
     }
    ],
    "source": [
-    "! python ponyge.py --fitness_function max_fitness_numba_cache --grammar_file btc_test_modified.pybnf --population_size 50 --generations 5 --cache --mutate_duplicates --save_all --multicore"
+    "! python ponyge.py --fitness_function fitness_v20241121 --grammar_file btc_test_no_ind.pybnf --population_size 20 --generations 5 --mutate_duplicates"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "! python ponyge.py --fitness_function max_fitness_numba_cache --grammar_file btc_test_no_ind.pybnf --population_size 500 --generations 100 --cache --mutate_duplicates --save_all --multicore"
    ]
   },
   {
