some not important changes

--- a/test.ipynb
+++ b/test.ipynb
@@ -21290,14 +21290,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 9/9 [00:03<00:00,  2.31it/s]\n"
+      " 22%|██▏       | 2/9 [00:00<00:00,  9.27it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1680, 131)\n",
+      "(1680, 131)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 44%|████▍     | 4/9 [00:00<00:00,  9.32it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1680, 131)\n",
+      "(1680, 131)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 67%|██████▋   | 6/9 [00:00<00:00,  9.21it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1680, 131)\n",
+      "(1680, 131)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 9/9 [00:00<00:00,  9.28it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1680, 131)\n",
+      "(1680, 131)\n",
+      "(1680, 131)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 9/9 [00:00<00:00,  9.25it/s]\n"
      ]
     }
    ],
@@ -21307,28 +21368,31 @@
     "import os\n",
     "from tqdm import tqdm\n",
     "\n",
-    "data_path = Path(r'C:/\\Users/\\vchar/\\OneDrive/\\Desktop/\\ML Projects/\\Upwork/\\AlgoT_ML_Dev/\\GrammarEvolution/\\PonyGE2/\\data_15min.csv')\n",
+    "data_path = Path(r'C:/\\Users/\\vchar/\\OneDrive/\\Desktop/\\ML Projects/\\Upwork/\\AlgoT_ML_Dev/\\GrammarEvolution/\\PonyGE2/\\data_30min.csv')\n",
     "df = pd.read_csv(data_path)\n",
     "\n",
-    "time_freq = 15\n",
+    "time_freq = 30\n",
     "\n",
     "fold_size = int(7 * 24 * 60 * 5 / time_freq)\n",
     "\n",
     "n_folds = int((df.shape[0] - (df.shape[0]  % fold_size)) / fold_size)\n",
     "\n",
-    "if not os.path.exists('data_folds_15min'):\n",
-    "    os.mkdir('data_folds_15min')\n",
+    "folder_name = f'data_folds_{time_freq}min'\n",
+    "\n",
+    "if not os.path.exists(folder_name):\n",
+    "    os.mkdir(folder_name)\n",
     "\n",
     "for i in tqdm(range(n_folds)):\n",
     "\n",
     "    temp_df = df.iloc[i*fold_size:(i+1)*fold_size]\n",
     "    temp_df.reset_index(drop=True, inplace=True)\n",
     "\n",
-    "    temp_df.to_csv(f\"data_folds_15min/data_fold{i+1}.csv\", index=False)\n",
+    "    temp_df.to_csv(f\"{folder_name}/data_fold{i+1}.csv\", index=False)\n",
+    "    print(temp_df.shape)\n",
     "\n",
     "test_df = df.iloc[n_folds*fold_size:]\n",
     "test_df.reset_index(drop=True, inplace=True)\n",
-    "test_df.to_csv(f\"data_folds_15min/test_data.csv\", index=False)"
+    "test_df.to_csv(f\"{folder_name}/test_data.csv\", index=False)"
    ]
   },
   {
